security-groups.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: Architecture to host Security Groups.
Parameters:
  EnvironmentName:
    Description: Environment Name
    Type: String

  VPC:
    Type: AWS::EC2::VPC::Id
    Description: VPC Id created in previous step

  RDSCIDR:
    Description: CIDR for RDS Security Group
    Type: String

Resources:
  ECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Access to the ECS hosts and the tasks/containers that run on them
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
          IpProtocol: -1
        - CidrIp: !Ref RDSCIDR
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-ecs-sg

  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Access to the load balancer that sits in front of ECS
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: -1
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-lb

  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Access to the RDS server
      SecurityGroupIngress:
        - CidrIp: !Ref RDSCIDR
          IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-rds

  BastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Access to the bastion server
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-bastion-sg

Outputs:
  ECSSecurityGroup:
    Description: A reference to the security group for ECS hosts
    Value: !Ref ECSSecurityGroup

  LoadBalancerSecurityGroup:
    Description: A reference to the security group for load balancers
    Value: !Ref LoadBalancerSecurityGroup

  RDSSecurityGroup:
    Description: A reference to the security group for RDS
    Value: !Ref RDSSecurityGroup

  BastionSecurityGroup:
    Description: A reference to the security group for RDS
    Value: !Ref BastionSecurityGroup
