vpc.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: Architecture to host VPC with Public and Private Subnets.
Parameters:
  EnvironmentName:
    Description: Name of the Environment
    Type: String

  BusinessUnit:
    Description: Name of the Organization
    Type: String

  VpcCidr:
    Description: CIDR Block for VPC
    Type: String
    Default: "10.68.68.0/24"

  PublicSubnetCIDR:
    Description: Public Subnet CIDR Range
    Type: CommaDelimitedList
    Default: "10.68.68.128/27, 10.68.68.160/27"

  PrivateSubnetCIDR:
    Description: Private Subnet CIDR Range
    Type: CommaDelimitedList
    Default: "10.68.68.0/26, 10.68.68.64/26, 10.68.68.192/28, 10.68.68.208/28, 10.68.68.224/28, 10.68.68.240/28"

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref 'VpcCidr'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: PRD-ISG-APM-VPC00
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code
          Value: ISG-TECAPIMON/18 
        - Key: Platform Name
          Value: APIMONETIZATION  

  DHCPOptions:
    Type: AWS::EC2::DHCPOptions
    Properties:
      DomainNameServers:
        - AmazonProvidedDNS
      Tags:
        - Key: Name
          Value: APMDHCP
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code
          Value: ISG-TECAPIMON/18 
        - Key: Platform Name
          Value: APIMONETIZATION   

  VPCDHCPOptionsAssociation:
    Type: AWS::EC2::VPCDHCPOptionsAssociation
    Properties:
      VpcId: !Ref VPC
      DhcpOptionsId: !Ref DHCPOptions

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: PRD-ISG-APM-VPC00
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code
          Value: ISG-TECAPIMON/18 
        - Key: Platform Name
          Value: APIMONETIZATION   

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
        VpcId: !Ref VPC
        InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Network
          Value: Public
        - Key: Name
          Value: CR-ECS-PUB-APMPRD-RTT00
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code
          Value: ISG-TECAPIMON/18 
        - Key: Platform Name
          Value: APIMONETIZATION   

  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: !Select [0, !Ref PublicSubnetCIDR]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: ECS-PUB-AZA-APMPRDISG-SUB00
        - Key: AZ
          Value:
            Fn::Select:
              - 0
              - Fn::GetAZs: ""
        - Key: Businessunit
          Value: !Ref BusinessUnit
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code


  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: !Select [1, !Ref PublicSubnetCIDR]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: ECS-PUB-AZA-APMPRDISG-SUB01
        - Key: az
          Value:
            Fn::Select:
              - 1
              - Fn::GetAZs: ""
        - Key: Businessunit
          Value: !Ref BusinessUnit
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code
          Value: ISG-TECAPIMON/18  
        - Key: Platform Name
          Value: APIMONETIZATION  

  PublicSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  NatGateway1:
    Type: "AWS::EC2::NatGateway"
    DependsOn: NatPublicIP1
    Properties:
      AllocationId: !GetAtt NatPublicIP1.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: NAT-PUB-AZA-APMPRDISG-00
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code
          Value: ISG-TECAPIMON/18 
        - Key: Platform Name
          Value: APIMONETIZATION 
        - Key: Environment
          Value: !Ref EnvironmentName

  NatPublicIP1:
    Type: "AWS::EC2::EIP"
    DependsOn: VPC
    Properties:
      Domain: vpc

  PrivateRouteTable1:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Network
          Value: Private
        - Key: Name
          Value: CR-ECS-PRI-APMPRD-RTT00
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code
          Value: ISG-TECAPIMON/18  
        - Key: Platform Name
          Value: APIMONETIZATION 
        - Key: Environment
          Value: !Ref EnvironmentName 

  PrivateRoute1:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: !Select [0, !Ref PrivateSubnetCIDR]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: ECS-PRI-AZA-APMPRDISG-SUB00
        - Key: AZ
          Value:
            Fn::Select:
              - 0
              - Fn::GetAZs: ""
        - Key: Businessunit
          Value: !Ref BusinessUnit
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: Role
          Value: infra
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code
          Value: ISG-TECAPIMON/18
        - Key: Platform Name
          Value: APIMONETIZATION    

  PrivateSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1

  NatGateway2:
    Type: "AWS::EC2::NatGateway"
    DependsOn: NatPublicIP2
    Properties:
      AllocationId: !GetAtt NatPublicIP2.AllocationId
      SubnetId: !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: NAT-PUB-AZA-APMPRDISG-01
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code
          Value: ISG-TECAPIMON/18 
        - Key: Platform Name
          Value: APIMONETIZATION  
        - Key: Businessunit
          Value: !Ref BusinessUnit 
  
  NatPublicIP2:
    Type: "AWS::EC2::EIP"
    DependsOn: VPC
    Properties:
      Domain: vpc

  PrivateRouteTable2:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Network
          Value: Private
        - Key: Name
          Value: CR-ECS-PRI-APMPRD-RTT01
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code
          Value: ISG-TECAPIMON/18 
        - Key: Platform Name
          Value: APIMONETIZATION  
        - Key: Businessunit
          Value: !Ref BusinessUnit 

  PrivateRoute2:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: !Select [1, !Ref PrivateSubnetCIDR]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: ECS-PRI-AZA-APMPRDISG-SUB01
        - Key: AZ
          Value:
            Fn::Select:
              - 1
              - Fn::GetAZs: ""
        - Key: Businessunit
          Value: !Ref BusinessUnit
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: Role
          Value: infra
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code
          Value: ISG-TECAPIMON/18 
        - Key: Platform Name
          Value: APIMONETIZATION   

  PrivateSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable2


  DBRouteTable1:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Network
          Value: Private
        - Key: Name
          Value: CR-DB-PRI-APMPRD-RTT00

  DBSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: !Select [2, !Ref PrivateSubnetCIDR]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: DB-PRI-AZA-APMPRDISG-SUB00
        - Key: AZ
          Value:
            Fn::Select:
              - 0
              - Fn::GetAZs: ""
        - Key: Businessunit
          Value: !Ref BusinessUnit
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: Role
          Value: db
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code
          Value: ISG-TECAPIMON/18
        - Key: Platform Name
          Value: APIMONETIZATION    

  DBSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref DBSubnet1
      RouteTableId: !Ref DBRouteTable1

  DBSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: !Select [3, !Ref PrivateSubnetCIDR]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: DB-PRI-AZA-APMPRDISG-SUB01
        - Key: AZ
          Value:
            Fn::Select:
              - 1
              - Fn::GetAZs: ""
        - Key: Businessunit
          Value: !Ref BusinessUnit
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: Role
          Value: db
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code
          Value: ISG-TECAPIMON/18 
        - Key: Platform Name
          Value: APIMONETIZATION   

  DBSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref DBSubnet2
      RouteTableId: !Ref DBRouteTable1

  DBSubnet3:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: !Select [4, !Ref PrivateSubnetCIDR]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: DB-PRI-AZA-APMPRDISG-SUB02
        - Key: AZ
          Value:
            Fn::Select:
              - 0
              - Fn::GetAZs: ""
        - Key: Businessunit
          Value: !Ref BusinessUnit
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: Role
          Value: db
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code
          Value: ISG-TECAPIMON/18 
        - Key: Platform Name
          Value: APIMONETIZATION   

  DBSubnet3RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref DBSubnet3
      RouteTableId: !Ref DBRouteTable1

  LambdaRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Network
          Value: Private
        - Key: Name
          Value: CR-Lambda-PRI-APMPRD-RTT00
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code
          Value: ISG-TECAPIMON/18 
        - Key: Platform Name
          Value: APIMONETIZATION 
        - Key: Businessunit
          Value: !Ref BusinessUnit  

  LambdaRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref LambdaRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  LambdaSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: !Select [5, !Ref PrivateSubnetCIDR]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: Lambda-PRI-AZA-APMPRDISG-SUB00
        - Key: AZ
          Value:
            Fn::Select:
              - 1
              - Fn::GetAZs: ""
        - Key: Businessunit
          Value: !Ref BusinessUnit
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: Role
          Value: infra
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code
          Value: ISG-TECAPIMON/18 
        - Key: Platform Name
          Value: APIMONETIZATION   

  LambdaSubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref LambdaSubnet
      RouteTableId: !Ref LambdaRouteTable

  PublicNetworkAcl:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId: !Ref VPC
      Tags:
        -
          Key: "Application"
          Value:
            Ref: "AWS::StackName"
        -
          Key: "Network"
          Value: "Public"
        -
          Key: "Name"
          Value: ECS-PUB-APMPRDISG-CNACL00
           
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code
          Value: ISG-TECAPIMON/18 
        - Key: Platform Name
          Value: APIMONETIZATION   
        - Key: Businessunit
          Value: !Ref BusinessUnit    

  InboundHTTPNACL:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PublicNetworkAcl"
      RuleNumber: '100'
      Protocol: "6"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: '80'
        To: '80'

  InboundHTTPSNACL:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PublicNetworkAcl"
      RuleNumber: '150'
      Protocol: "6"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: '443'
        To: '443'

  InboundSSHNACL:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PublicNetworkAcl"
      RuleNumber: '200'
      Protocol: "6"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: '22'
        To: '22'

  InboundDNSNACL:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PublicNetworkAcl"
      RuleNumber: '250'
      Protocol: "6"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: '53'
        To: '53'

  InboundPortTCPNACL:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PublicNetworkAcl"
      RuleNumber: '300'
      Protocol: "6"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: '1024'
        To: '65535'

  InboundPortUDPNACL:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PublicNetworkAcl"
      RuleNumber: '350'
      Protocol: "17"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: '1024'
        To: '65535'

  OutboundPublicNetworkAclEntry:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PublicNetworkAcl"
      RuleNumber: "100"
      Protocol: "-1"
      RuleAction: "allow"
      Egress: "true"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: '0'
        To: '65535'

  PublicSubnetNetworkAclAssociation0:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId:
        Ref: "PublicSubnet1"
      NetworkAclId:
        Ref: "PublicNetworkAcl"

  PublicSubnetNetworkAclAssociation1:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId:
        Ref: "PublicSubnet2"
      NetworkAclId:
        Ref: "PublicNetworkAcl"

  PrivateDBNetworkAcl:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId: !Ref VPC
      Tags:
        -
          Key: "Application"
          Value:
            Ref: "AWS::StackName"
        -
          Key: "Network"
          Value: "Private"
        -
          Key: "Name"
          Value: DBS-PRI-APMPRDISG-CNACL00
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code
          Value: ISG-TECAPIMON/18 
        - Key: Platform Name
          Value: APIMONETIZATION 
        - Key: Businessunit
          Value: !Ref BusinessUnit      

  InboundRDSDBNACL:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PrivateDBNetworkAcl"
      RuleNumber: '100'
      Protocol: "6"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: '5432'
        To: '5432'

  InboundDNSDBNACL:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PrivateDBNetworkAcl"
      RuleNumber: '150'
      Protocol: "6"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: '53'
        To: '53'

  OutboundPrivateDBNetworkAclEntry:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PrivateDBNetworkAcl"
      RuleNumber: "100"
      Protocol: "-1"
      RuleAction: "allow"
      Egress: "true"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: '0'
        To: '65535'

  PrivateDBSubnetNetworkAclAssociation0:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId:
        Ref: "DBSubnet1"
      NetworkAclId:
        Ref: "PrivateDBNetworkAcl"

  PrivateDBSubnetNetworkAclAssociation1:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId:
        Ref: "DBSubnet2"
      NetworkAclId:
        Ref: "PrivateDBNetworkAcl"

  PrivateDBSubnetNetworkAclAssociation2:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId:
        Ref: "DBSubnet3"
      NetworkAclId:
        Ref: "PrivateDBNetworkAcl"

  PrivateInfraNetworkAcl:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId: !Ref VPC
      Tags:
        -
          Key: "Application"
          Value:
            Ref: "AWS::StackName"
        -
          Key: "Network"
          Value: "Private"
        -
          Key: "Name"
          Value: ECS-PRI-APMPRDISG-CNACL00
            
        - Key: Backup 
          Value: Weekly
        - Key: Deployment
          Value: PROD:PREP
        - Key: Project
          Value: APIMONETIZATION
        - Key: Cost Center
          Value: ISG-TECAPIMON/18
        - Key: WBS Code
          Value: ISG-TECAPIMON/18
        - Key: Platform Name
          Value: APIMONETIZATION  
        - Key: Businessunit
          Value: !Ref BusinessUnit      

  InboundSSHInfraNACL:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PrivateInfraNetworkAcl"
      RuleNumber: '100'
      Protocol: "6"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: '22'
        To: '22'

  InboundPortInfraNACL:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PrivateInfraNetworkAcl"
      RuleNumber: '150'
      Protocol: "6"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: '1024'
        To: '65535'

  InboundDNSInfraNACL:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PrivateInfraNetworkAcl"
      RuleNumber: '200'
      Protocol: "6"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: '53'
        To: '53'

  InboundPortInfraTCPNACL:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PrivateInfraNetworkAcl"
      RuleNumber: '250'
      Protocol: "6"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: '1024'
        To: '65535'

  InboundPortInfraUDPNACL:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PrivateInfraNetworkAcl"
      RuleNumber: '300'
      Protocol: "17"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: '1024'
        To: '65535'

  OutboundPrivateInfraNetworkAclEntry:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref "PrivateInfraNetworkAcl"
      RuleNumber: "100"
      Protocol: "-1"
      RuleAction: "allow"
      Egress: "true"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: '0'
        To: '65535'

  PrivateInfraSubnetNetworkAclAssociation0:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId:
        Ref: "PrivateSubnet1"
      NetworkAclId:
        Ref: "PrivateInfraNetworkAcl"

  PrivateInfraSubnetNetworkAclAssociation1:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId:
        Ref: "PrivateSubnet2"
      NetworkAclId:
        Ref: "PrivateInfraNetworkAcl"

  PrivateInfraSubnetNetworkAclAssociation2:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId:
        Ref: "LambdaSubnet"
      NetworkAclId:
        Ref: "PrivateInfraNetworkAcl"

  VPCParameter:
    Type: "AWS::SSM::Parameter"
    DependsOn: VPC
    Properties:
      Name: !Sub "/${BusinessUnit}/${EnvironmentName}/vpc"
      Type: "String"
      Value: !Ref VPC

  VPCCIDRParameter:
    Type: "AWS::SSM::Parameter"
    DependsOn: VPC
    Properties:
      Name: !Sub "/${BusinessUnit}/${EnvironmentName}/vpccidr"
      Type: "String"
      Value: !GetAtt VPC.CidrBlock

  ParameterStorePublicSubnet1:
    Type: "AWS::SSM::Parameter"
    DependsOn: 
      - PublicSubnet1
      - PublicSubnet2
    Properties:
      Name: !Sub "/${BusinessUnit}/${EnvironmentName}/publicsubnet1"
      Type: "String"
      Value: !Ref PublicSubnet1
  ParameterStorePublicSubnet2:
    Type: "AWS::SSM::Parameter"
    DependsOn: 
      - PublicSubnet1
      - PublicSubnet2
    Properties:
      Name: !Sub "/${BusinessUnit}/${EnvironmentName}/publicsubnet2"
      Type: "String"
      Value: !Ref PublicSubnet2   

  ParameterStorePrivateSubnet1:
    Type: "AWS::SSM::Parameter"
    DependsOn:
      - PrivateSubnet1
      - PrivateSubnet2
    Properties:
      Name: !Sub "/${BusinessUnit}/${EnvironmentName}/privatesubnet1"
      Type: "String"
      Value: !Ref PrivateSubnet1
  ParameterStorePrivateSubnet2:
    Type: "AWS::SSM::Parameter"
    DependsOn:
      - PrivateSubnet1
      - PrivateSubnet2
    Properties:
      Name: !Sub "/${BusinessUnit}/${EnvironmentName}/privatesubnet2"
      Type: "String"
      Value: !Ref PrivateSubnet2

  ParameterStoreDBSubnet1:
    Type: "AWS::SSM::Parameter"
    DependsOn:
      - PrivateSubnet1
      - PrivateSubnet2
      - DBSubnet1
    Properties:
      Name: !Sub "/${BusinessUnit}/${EnvironmentName}/dbsubnet1"
      Type: "String"
      Value: !Ref DBSubnet1
  ParameterStoreDBSubnet2:
    Type: "AWS::SSM::Parameter"
    DependsOn:
      - PrivateSubnet1
      - PrivateSubnet2
      - DBSubnet1
      - DBSubnet2
    Properties:
      Name: !Sub "/${BusinessUnit}/${EnvironmentName}/dbsubnet2"
      Type: "String"
      Value: !Ref DBSubnet2

  ParameterStoreDBSubnet3:
    Type: "AWS::SSM::Parameter"
    DependsOn:
      - PrivateSubnet1
      - PrivateSubnet2
      - DBSubnet1
      - DBSubnet2
      - DBSubnet3
    Properties:
      Name: !Sub "/${BusinessUnit}/${EnvironmentName}/dbsubnet3"
      Type: "String"
      Value: !Ref DBSubnet3

  ParameterStoreLambdasubnet:
    Type: "AWS::SSM::Parameter"
    DependsOn:
      - PrivateSubnet1
      - PrivateSubnet2
      - DBSubnet1
      - DBSubnet2
      - DBSubnet3
    Properties:
      Name: !Sub "/${BusinessUnit}/${EnvironmentName}/lambdasubnet1"
      Type: "String"
      Value: !Ref DBSubnet3          

  


Outputs:
  VPC:
    Description: A reference to the created VPC
    Value: !Ref VPC

  PublicSubnets:
    Description: A list of the public subnets
    Value: !Join [",", [!Ref PublicSubnet1, !Ref PublicSubnet2]]

  PrivateSubnets:
    Description: A list of the private subnets
    Value: !Join [",", [!Ref PrivateSubnet1, !Ref PrivateSubnet2]]

  DBPrivateSubnets:
    Description: A list of the db subnets
    Value: !Join [",", [!Ref DBSubnet1, !Ref DBSubnet2]]

  LambdaSubnets:
    Description: A list of the lambda subnets
    Value: !Ref LambdaSubnet

  PublicSubnet1:
    Description: A reference to the public subnet in the 1st Availability Zone
    Value: !Ref PublicSubnet1

  PublicSubnet2:
    Description: A reference to the public subnet in the 2nd Availability Zone
    Value: !Ref PublicSubnet2

  PrivateSubnet1:
    Description: A reference to the private subnet in the 1st Availability Zone
    Value: !Ref PrivateSubnet1

  PrivateSubnet2:
    Description: A reference to the private subnet in the 2nd Availability Zone
    Value: !Ref PrivateSubnet2

  DBSubnet1:
    Description: A reference to the db subnet in the 1st Availability Zone
    Value: !Ref DBSubnet1

  DBSubnet2:
    Description: A reference to the db subnet in the 2nd Availability Zone
    Value: !Ref DBSubnet2
  
  DBSubnet3:
    Description: A reference to the db subnet in the 1st Availability Zone
    Value: !Ref DBSubnet3

  LambdaSubnet:
    Description: A reference to the lambda subnet in the 1st Availability Zone
    Value: !Ref LambdaSubnet
